# school-management-system

./: README.md  Todolist.md
dashboard/: README.md  next.config.js  (+2 more)
server/: .env  Cargo.toml  SCHEMAS.md
server/src/: lib.rs  main.rs
server/src/config/: db.rs
server/src/graphql/: graphql_context.rs  mod.rs  schema.rs
server/src/graphql/attendance/: inputs.rs  mod.rs  mutations.rs  queries.rs  types.rs
server/src/graphql/branch/: inputs.rs  mutations.rs  queries.rs  types.rs
server/src/graphql/class/: inputs.rs  mutations.rs  queries.rs  types.rs
server/src/graphql/common/: types.rs
server/src/graphql/grade/: inputs.rs  mutations.rs  queries.rs  types.rs
server/src/graphql/grade_level/: inputs.rs  mod.rs  mutations.rs  queries.rs  types.rs
server/src/graphql/hr/: inputs.rs  mutations.rs  queries.rs  types.rs
server/src/graphql/member/: inputs.rs  mod.rs  mutations.rs  queries.rs
server/src/graphql/school/: inputs.rs  mod.rs  mutations.rs  queries.rs
server/src/graphql/student/: inputs.rs  mutations.rs  queries.rs  types.rs
server/src/graphql/subject/: inputs.rs  mutations.rs  queries.rs  types.rs
server/src/graphql/user/: mod.rs  queries.rs
server/src/models/: attendance.rs  branch.rs  class.rs  finance.rs  grade.rs  grade_level.rs  hr.rs  member.rs  mod.rs  school.rs  student.rs  subject.rs  user.rs
server/src/routes/: attendance_routes.rs  auth.rs  branch_routes.rs  class_routes.rs  grade_routes.rs  mod.rs  school_routes.rs  student_routes.rs  subject_routes.rs
server/src/utils/: common_types.rs  jwt_token.rs  mod.rs  permissions.rs
(+136 files in other folders)
