[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
mongodb = { version = "2.8", features = ["bson-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-actix-web = "7"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9"
